corrected overflow on search result upcs

--- a/src/public/static/styles/cells/main.less
+++ b/src/public/static/styles/cells/main.less
@@ -147,6 +147,7 @@
         margin-top: 5px;
       }
       span {
+        display: inline-block;
         overflow-x: hidden;
         text-overflow: ellipsis;
       }
